--- a/index.html
+++ b/index.html
@@ -6,39 +6,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks</title>
-    <link rel="shortcut icon" href="./Logo_Mighty_ducks-01.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/Logo_Mighty_ducks-01.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <figure><img src="./Logo_Mighty_ducks-01.png" width="100" alt="logo Mighty Ducks Hockey League"></figure>
         <h1>Mighty Ducks Hockey League</h1>
+        <div class="contenedor-banner">
+        </div>
+        <div class="barra">
+            <p>Upcoming Events</p>
+        </div>
     </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="./About.html"> About MDHL</a>
+    <nav class="titulo">
+        <a class="activo" href="#">Home</a>
+        <a href="./About.html"> About</a>
         <a href="./contac.html"> contact</a>
     </nav>
     <main>
-        <article>
-            <figure>
-                <img src="./hockey_1.jpg" width="100" alt="player Mighty Ducks Hockey League">
-            </figure>
-            <h2>Upcoming Events</h2>
-            <section>
-                <h3>August 4</h3>
-                <p>MDSL Fundraiser</p>
-            </section>
-            <section>
-                <h3>August 16</h3>
-                <p>Season Kick-off: Meet the Teams</p>
-            </section>
-            <section>
-                <h3>September 1</h3>
-                <p>First Game of the Season (Check Game Schedule for details)</p>
-            </section>
+        <div class="contenedor-main">
+            <div class="contenedor-img">
+                <figure>
+                    <img class="foto" src="./img/Logo_Mighty_ducks-01.png" width="100"
+                        alt="logo Mighty Ducks Hockey League">
+                </figure>
+                <figure>
+                    <img class="foto" src="./img/hockey_1.jpg" alt="player Mighty Ducks Hockey League">
+                </figure>
+            </div>
 
-        </article>
+
+            <div class="contenedor-datos">
+                <section>
+                    <h3>August 4</h3>
+                    <p>MDSL Fundraiser</p>
+                </section>
+                <section>
+                    <h3>August 16</h3>
+                    <p>Season Kick-off: Meet the Teams</p>
+                </section>
+                <section>
+                    <h3>September 1</h3>
+                    <p>First Game of the Season (Check Game Schedule for details)</p>
+                </section>
+            </div>
+        </div> 
     </main>
 
 </body>
