subiendo las actualizaciones para task 4

--- a/About.html
+++ b/About.html
@@ -23,6 +23,7 @@
             <a href="./contact.html"> Contact</a>
             <a href="./rules.html"> Rules</a>
             <a href="./game-info.html"> Game-Info</a>
+            <a href="./registration.html">Registration</a>
         </nav>
 
     </header>
@@ -33,7 +34,7 @@
                 <figure>
                     <img class="tamaño" src="./img/palos-removebg-preview.png" alt="">
                 </figure>
-                <figure ">
+                <figure>
                     <img class="foto-about" src="./img/hockey_2.jpg" alt="">
                 </figure>
                 <figure>
@@ -42,13 +43,13 @@
             </div>
 
             <div class="contenedor-datos">
-                <section class="home-about"">
+                <section class="home-about">
             <h3>Mision</h3> <br>
             <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
                 learning and playing soccer, with opportunities to learn and practice skills related to the game of
                 hockey, specifically those skills around team cooperation and good sportsmanship</p>
         </section>
-        <section class=" home-about"">
+        <section class=" home-about">
                     <h3>Vision</h3> <br>
                     <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
                         through the building of character, self-discipline, and leadership.</p>
