--- a/contact.html
+++ b/contact.html
@@ -23,20 +23,21 @@
             <a class="activo" href="#"> Contact</a>
             <a href="./rules.html"> Rules</a>
             <a href="./game-info.html"> Game-Info</a>
+            <a href="./registration.html">Registration</a>
         </nav>
 
     </header>
 
     <main>
         <div class="contenedor-main">
-            <div class="contenedor-img">
+            <div class="contenedor-img cont-home">
                 <figure>
                     <img class="foto" src="./img/Logo_Mighty_ducks-01.png" width="100"
                         alt="logo Mighty Ducks Hockey League">
                 </figure>
 
                 <figure>
-                    <img class="foto" src="./img/hockey_3.jpg" width="100" alt="player Mighty Ducks Hockey League" />
+                    <img class="foto" src="./img/hockey_3.jpg" width="100" alt="player Mighty Ducks Hockey League" >
                 </figure>
             </div>
 
