--- a/game-info.html
+++ b/game-info.html
@@ -23,6 +23,7 @@
             <a href="./contact.html"> Contact</a>
             <a href="./rules.html"> Rules</a>
             <a class="activo" href="#"> Game-Info</a>
+            <a href="./registration.html">Registration</a>
         </nav>
 
     </header>
@@ -101,15 +102,86 @@
 
                 </table>
 
-
-
-
-
-
-
             </div>
 
 
+
+
+
+            <div class="contenedor-mapas">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11799.122572613156!2d-87.8628046!3d42.3258772!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1675791066753!5m2!1ses-419!2sar"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <br> <br>
+
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.0106031394907!2d-87.86888169999997!3d42.320972599999976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f933bce5af881%3A0x740a7a7d548adce1!2sGreen%20Bay%20School%20(Pre-K)!5e0!3m2!1ses-419!2sar!4v1675791482808!5m2!1ses-419!2sar"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <br><br>
+
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2480.8738789962968!2d-87.8535222282977!3d42.31537842995884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675791832787!5m2!1ses-419!2sar"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <br><br>
+
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.2898383819593!2d-87.6459727!3d41.9296229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses-419!2sar!4v1675792177275!5m2!1ses-419!2sar"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <br><br>
+
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4197.884011846701!2d-87.64203276118026!3d41.92828157898867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd37495ef6bb7%3A0x289fc75dd0fe331d!2sNorth%20Pond!5e0!3m2!1ses-419!2sar!4v1675792318460!5m2!1ses-419!2sar"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <br><br>
+
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25924.418414478638!2d-87.62331670712064!3d41.85844515640978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c8f3bbc18fb%3A0x91e24d68ed0a1370!2sSouth%20Loop%2C%20Chicago%2C%20Illinois%2C%20EE.%20UU.!5e0!3m2!1ses-419!2sar!4v1675792561275!5m2!1ses-419!2sar"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+            <div class="mjs">
+                <div class="game-contenedor">
+                    <h3 class="enlinea">Facility Type:</h3>
+                    <p class="enlinea">Outdoor</p>
+                    <br><br>
+                    <h3 class="enlinea">Additional Information:</h3>
+                    <p class="enlinea">If deemed necessary by MDHL games may be shortened or cancelled due to extreme
+                        weather conditions</p>
+                    <br><br><br>
+                    <h3 class="enlinea">Please direct all questions to:</h3>
+                    <p class="enlinea">Michael Randall, League Coordinator</p>
+                    <div class="cot">
+                        <div>
+                            <h3 class="enlinea">Phone:</h3>
+                            <p class="enlinea">(630)690-8132</p>
+                        </div>
+                        <br>
+                        <div>
+                            <h3 class="enlinea">Email:</h3>
+                            <p class="enlinea">michael.randall@chihockey.org</p>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
 
         </div>
     </main>
