--- a/rules.html
+++ b/rules.html
@@ -23,6 +23,7 @@
             <a href="./contact.html"> Contact</a>
             <a class="activo" href="#"> Rules</a>
             <a href="./game-info.html"> Game-Info</a>
+            <a href="./registration.html">Registration</a>
         </nav>
 
     </header>
