--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
             <a href="./rules.html">Rules</a>
 
             <a href="./game-info.html">Game-Info</a>
+            
+            <a href="./registration.html">Registration</a>
         </nav>
 
     </header>
 
     <main>
         <div class="contenedor-main">
-            <div class="contenedor-img">
+            <div class="contenedor-img cont-home">
                 <figure>
                     <img class="foto" src="./img/design1_image2).jpg" alt="">
                 </figure>
